# planeks_news

./: pyproject.toml
planeks_news/: db.sqlite3  mailgun.py  tasks.py  welcome.txt
planeks_news/news/: forms.py  models.py  urls.py  views.py
planeks_news/news/migrations/: 0001_initial.py  0002_auto_20191210_1328.py  0003_auto_20191210_2110.py  0004_auto_20191210_2119.py
planeks_news/news/templates/news/: _post.html  comment_create.html  drafts.html  new_comment_email.html  post_base.html  post_create.html  post_detail.html  post_list.html
planeks_news/planeks_auth/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
planeks_news/planeks_auth/migrations/: 0001_initial.py  0002_user_group.py  0003_remove_user_group.py  0004_remove_user_is_moderator.py
planeks_news/planeks_auth/templates/planeks_auth/: address_confirm_email.html  login.html  password_reset_complete.html  password_reset_email.html  profile.html  reset.html  reset_pass.html  signup.html  update.html
planeks_news/planeks_news/: celery.py  settings.py  urls.py  views.py  wsgi.py
planeks_news/templates/: base.html  home.html
tests/: test_planeks_test.py
