[tool.poetry]
name = "planeks_test"
version = "0.1.0"
description = ""
authors = ["kuksabird <samoilovartem1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "=2.2"
django-bootstrap4 = "^1.0"
Pillow = "^6.2"
requests = "^2.22"
celery = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
